files/rules.v4
# Generated by iptables-save v1.8.7 on Wed Jun 22 02:06:24 2022
*mangle
:PREROUTING ACCEPT [259:13044]
:INPUT ACCEPT [37:2432]
-A INPUT -d 1.2.3.4/32 -p tcp -m multiport --dports 8007,10000 -j DROP
:FORWARD ACCEPT [222:10612]
:OUTPUT ACCEPT [136:11064]
:POSTROUTING ACCEPT [358:21676]
COMMIT
# Completed on Wed Jun 22 02:06:24 2022
# Generated by iptables-save v1.8.7 on Wed Jun 22 02:06:24 2022
*nat
:PREROUTING ACCEPT [118:5484]
:INPUT ACCEPT [7:288]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [158:7260]
-A PREROUTING -d 1.2.3.4/32 -p tcp -m tcp --dport 8999 -j DNAT --to-destination 192.168.12.2:8999
-A PREROUTING -d 1.2.3.4/32 -p tcp -m multiport --dports 80,443 -j DNAT --to-destination 192.168.12.3
-A PREROUTING -d 1.2.3.4/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 192.168.12.4:22
-A PREROUTING -d 1.2.3.4/32 -p tcp -m multiport ! --dports 6070,8006,10000,8999,80,443,22 -j DNAT --to-destination 192.168.12.2
-A PREROUTING -d 1.2.3.4/32 -p udp -m multiport ! --dports 6070,8006,10000,8999,80,443,22 -j DNAT --to-destination 192.168.12.2
-A POSTROUTING -s 192.168.12.0/24 -o vmbr0 -j MASQUERADE
COMMIT
# Completed on Wed Jun 22 02:06:24 2022
# Generated by iptables-save v1.8.7 on Wed Jun 22 02:06:24 2022
*raw
:PREROUTING ACCEPT [259:13044]
:OUTPUT ACCEPT [136:11064]
-A PREROUTING -i fwbr+ -j CT --zone 1
-A PREROUTING -i fwbr+ -j CT --zone 1
COMMIT
# Completed on Wed Jun 22 02:06:24 2022
# Generated by iptables-save v1.8.7 on Wed Jun 22 02:06:24 2022
*filter
:INPUT ACCEPT [37:2432]
:FORWARD ACCEPT [222:10612]
:OUTPUT ACCEPT [136:11064]
COMMIT
# Completed on Wed Jun 22 02:06:24 2022
