files/rules.v6
# Generated by ip6tables-save v1.8.7 on Wed Jun 22 02:06:24 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Wed Jun 22 02:06:24 2022
# Generated by ip6tables-save v1.8.7 on Wed Jun 22 02:06:24 2022
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Wed Jun 22 02:06:24 2022
# Generated by ip6tables-save v1.8.7 on Wed Jun 22 02:06:24 2022
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i vmbr0 -j REJECT --reject-with icmp6-adm-prohibited
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p ipv6-icmp -j ACCEPT
-A FORWARD -d 2a01:abc:ccc:aaa:1::3/128 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -i vmbr0 -j REJECT --reject-with icmp6-adm-prohibited
COMMIT
# Completed on Wed Jun 22 02:06:24 2022
# Generated by ip6tables-save v1.8.7 on Wed Jun 22 02:06:24 2022
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Wed Jun 22 02:06:24 2022
